WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265534
[UnifiedPDF] (regression) Rotated (landscape) pages are drawn not-rotated
https://bugs.webkit.org/show_bug.cgi?id=265534
Summary
[UnifiedPDF] (regression) Rotated (landscape) pages are drawn not-rotated
Tim Horton
Reported
2023-11-29 11:18:31 PST
[UnifiedPDF] (regression) Rotated (landscape) pages are drawn not-rotated
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2023-11-29 11:18:35 PST
<
rdar://problem/118940171
>
Tim Horton
Comment 2
2023-11-29 11:20:12 PST
Pull request:
https://github.com/WebKit/WebKit/pull/21060
EWS
Comment 3
2023-11-29 12:42:42 PST
Committed
271297@main
(62d501481861): <
https://commits.webkit.org/271297@main
> Reviewed commits have been landed. Closing PR #21060 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug