[UnifiedPDF] (regression) Rotated (landscape) pages are drawn not-rotated https://bugs.webkit.org/show_bug.cgi?id=265534 rdar://118940171

Reviewed by Simon Fraser.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::paintContents):
PDFKit handles the page transform itself.

Canonical link: https://commits.webkit.org/271297@main